# ai-engineer-training

week03-homework/: pyproject.toml
week03-homework-2/: pyproject.toml
week03-homework-2/graph_rag/: main.py  report.md
week03-homework-2/graph_rag/data/: docs.jsonl  ownership_edges.jsonl
week03-homework-2/milvus_faq/: main.py  report.md
week03-homework-2/milvus_faq/data/: faqs.jsonl
week03-homework/chunking_research/: main.py  report.md
week03-homework/ocr_research/: main.py  report.md
week03/code/: P12-提示词模板.ipynb  P35-SQLdemo.ipynb  p17-LlamaIndex初步.ipynb  p27-切片.ipynb
week04-homework/: pyproject.toml
week04-homework/smart_customer_service/: __init__.py  config.py  data.py  tools_core.py
week04-homework/smart_customer_service/plugins/: __init__.py  invoice_plugin.py
week05-homework/multi-agent/: __init__.py  main.py  report.md
