[project]
name = "week04-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"python-dotenv",
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"pydantic>=2.7.0",
	"langchain-core>=0.3.0",
	"langgraph>=0.2.0",
	"pytest>=8.0.0",
	"httpx>=0.27.0",
]
